# numa

./: .gitignore  CMakeLists.txt  README.md
src/Numa/: CMakeLists.txt  Common.cpp  Common.h  Derivative.cpp  Derivative.h  FFT.cpp  FFT.h  Fitting.cpp  Fitting.h  Fitting_internal.h  Integral.cpp  Integral.h  Numa.h
test/: CMakeLists.txt  Main.cpp
